--- a/README
+++ b/README
@@ -30,8 +30,9 @@ INSTALLING
   如果需要biliip解析功能，请使用以下命令编译:
         ./bootstrap.sh && ./configure --without-gtk --disable-ipv6 \
           --with-biliip && make
-  下载Downloads中的数据文件放置至
+  下载以下地址中的数据文件放置至
         /usr/share/BiliIP/BiliIP.dat
+	http://i2.hdslb.com/u_user/d41d8cd98f00b204e9800998ecf8427e.gz
   运行时使用以下两种方式：
         MTR_OPTIONS="-R" mtr
         mtr -R
